--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.105",
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "vite": "^5.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
