--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,8 @@
-# exemplo deu um netlify.toml
 [build]
-  command = "vite build"
+  command = "npm run build" 
   functions = "netlify/functions"
   publish = "dist"
 
-# Redirecionamento de todas as rotas para /index.html
 [[redirects]]
   from = "/*"
   to = "/index.html"
