--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
+  base = "."
   command = "npm run build" 
   functions = "netlify/functions"
-  publish = "dist"
+  publish = "./build/"
 
 [[redirects]]
   from = "/*"
